# asio-websocket-server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  testWeb.js  test_server.sln
Debug/: public.lib  test_client.ilk
public/: CMakeLists.txt  Makefile  Message.cpp  Message.h  cmake_install.cmake  public.vcxproj  public.vcxproj.filters
public/Debug/: message.obj.enc  public.idb
public/Debug/public.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
public/x64/Debug/: public.idb
public/x64/Debug/public.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  public.lastbuildstate
test_server/: RequestParser.cpp  RequestParser.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp  test_server.vcxproj  test_server.vcxproj.filters
test_server/Debug/: requestparser.obj.enc
test_server/Debug/test_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_server.lastbuildstate
test_server/x64/Debug/test_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: public.lib  test_server.ilk
